# applyos

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  decision_agent.py
backend/app/agents/prompts/: fit_scorer.md  jd_parser.md  outreach_writer.md
backend/app/api/: agent.py  analytics.py  applications.py  auth.py  contacts.py  daily.py  dashboard.py  jobs.py  outreach.py  profile.py  resumes.py
backend/app/core/: config.py  security.py
backend/app/db/: models.py  session.py
backend/app/schemas/: models.py
backend/app/services/: crud.py  matching.py  serializers.py
backend/tests/: conftest.py  test_agent.py  test_api.py
docs/: initial_build_log.md
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/backend/[...path]/: route.ts
frontend/components/: app-shell.tsx
frontend/lib/: api.ts
